--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,6 +5,11 @@
     android:orientation="vertical"
     android:padding="@dimen/general_padding">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_alarms_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add_alarm"
         android:layout_width="wrap_content"
