--- a/app/src/main/res/layout/fragment_single_alarm_editor.xml
+++ b/app/src/main/res/layout/fragment_single_alarm_editor.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -33,8 +34,66 @@
         android:id="@+id/tv_alarm_state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
         android:textColor="@color/white"
         android:textSize="18sp" />
+
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/chip_group_alarm_days"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:singleLine="true">
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_monday"
+            style="@style/CustomChipStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/chip_monday_text" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_tuesday"
+            style="@style/CustomChipStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/chip_tuesday_text" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_wednesday"
+            style="@style/CustomChipStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/chip_wednesday_text" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_thursday"
+            style="@style/CustomChipStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/chip_thursday_text" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_friday"
+            style="@style/CustomChipStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/chip_friday_text" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_saturday"
+            style="@style/CustomChipStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/chip_saturday_text" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_sunday"
+            style="@style/CustomChipStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/chip_sunday_text" />
+
+    </com.google.android.material.chip.ChipGroup>
 
     <RelativeLayout
         android:layout_width="match_parent"
