--- a/app/src/main/res/layout/fragment_single_alarm_editor.xml
+++ b/app/src/main/res/layout/fragment_single_alarm_editor.xml
@@ -95,6 +95,25 @@
 
     </com.google.android.material.chip.ChipGroup>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:labelFor="@+id/et_alarm_name"
+            android:text="@string/alarm_name_hint" />
+
+        <EditText
+            android:id="@+id/et_alarm_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text" />
+
+    </LinearLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
