--- a/app/src/main/res/layout/view_single_alarm.xml
+++ b/app/src/main/res/layout/view_single_alarm.xml
@@ -8,7 +8,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         card_view:contentPadding="@dimen/general_padding">
 
@@ -21,9 +21,19 @@
                 android:id="@+id/tv_alarm_scheduled_to"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="12dp"
                 android:gravity="center_vertical"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tv_alarm_name"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="12dp"
+                android:gravity="center_vertical"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
