--- a/app/src/main/res/layout/fragment_single_alarm_editor.xml
+++ b/app/src/main/res/layout/fragment_single_alarm_editor.xml
@@ -98,6 +98,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:orientation="horizontal">
 
         <TextView
@@ -113,6 +114,25 @@
             android:inputType="text" />
 
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:text="@string/alarm_sound" />
+
+        <TextView
+            android:id="@+id/tv_alarm_sound"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:text="@string/alarm_sound" />
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
